Rename an interface, update JavaDocs, refactor