@@ -1,44 +1,33 @@
 package rsp.component;
 
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import rsp.component.definitions.InitialStateComponent;
 import rsp.component.definitions.StatefulComponent;
-import rsp.component.definitions.StoredStateComponent;
-import rsp.dom.DefaultDomChangesContext;
-import rsp.dom.DomEventEntry;
 import rsp.dom.TreePositionPath;
-import rsp.page.EventContext;
 import rsp.page.QualifiedSessionId;
-import rsp.page.events.RemoteCommand;
 import rsp.server.Path;
 import rsp.server.TestSessonEventsConsumer;
 import rsp.server.http.HttpRequest;
-import rsp.util.json.JsonDataType;
 
 import java.net.URI;
-import java.util.HashMap;
-import java.util.Map;
-import java.util.concurrent.CompletableFuture;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static rsp.html.HtmlDsl.*;
 import static rsp.util.HtmlAssertions.assertHtmlFragmentsEqual;
-import static rsp.util.TestUtils.findFirstListElementByType;
-@Disabled
-class StoredStateComponentSegmentDefinitionTests {
-    static final Map<ComponentCompositeKey, Integer> stateStore = new HashMap<>();
-    static final ComponentView<Boolean> view = newState -> state ->
+
+class InitialStateComponentTests {
+
+    static final ComponentView<String> view = newState -> state ->
             div(
-                    span(text("toggle"), on("click", ctx -> newState.setState(!state))),
-                    when(state, () ->
-                         new StoredStateComponent<>(100,
-                                                              __ -> s -> div(text("test-store-" + s)),
-                                                              stateStore))
+                    span(state),
+                    new InitialStateComponent<>("test",
+                                                         100,
+                                                         ns -> s -> div(a(on("click", c -> ns.setState(101)),
+                                                                          text("test-link-" + s))))
             );
 
     @Test
-    void component_renders_initial_html_and_after_state_set_generates_dom_update_commands() {
+    void component_renders_initial_html_and_after_state_update_generates_dom_change_commands() {
         final QualifiedSessionId qualifiedSessionId = new QualifiedSessionId("test-device", "test-session");
         final URI uri = URI.create("http://localhost");
         final HttpRequest httpRequest = new HttpRequest(HttpRequest.HttpMethod.GET,
@@ -50,24 +39,25 @@ class StoredStateComponentSegmentDefinitionTests {
                                                                                 TreePositionPath.of("1"),
                                                                                 new ComponentContext(),
                                                                                 commands);
-        final StatefulComponent<Boolean> scd = new InitialStateComponent<>(true,
-                                                                                               view);
+        final StatefulComponent<String> scd = new InitialStateComponent<>("state-0",
+                                                                                              view);
         // Initial render
         scd.render(renderContext);
 
         assertHtmlFragmentsEqual("<div>\n" +
-                                 " <span>toggle</span>\n" +
+                                 " <span>state-0</span>\n" +
                                  " <div>\n" +
-                                 "  test-store-100\n" +
+                                 "  <a>test-link-100</a>\n" +
                                  " </div>\n" +
                                  "</div>",
-                                renderContext.html());
+                                 renderContext.html());
 
         assertEquals(1, renderContext.recursiveEvents().size());
+        assertEquals("click", renderContext.recursiveEvents().get(0).eventName);
+      /*  assertEquals(TreePositionPath.of("1_2_1"), renderContext.recursiveEvents().get(0).eventTarget.elementPath());
 
-        // Remove sub component
         // Click
-        final DomEventEntry clickEvent = (DomEventEntry) renderContext.recursiveEvents().get(0);
+        final EventEntry clickEvent = renderContext.recursiveEvents().get(0);
         final EventContext clickEventContext = new EventContext(clickEvent.eventTarget.elementPath(),
                                                                 js -> CompletableFuture.completedFuture(JsonDataType.Object.EMPTY),
                                                                 ref -> null,
@@ -77,17 +67,7 @@ class StoredStateComponentSegmentDefinitionTests {
         clickEvent.eventHandler.accept(clickEventContext);
 
         assertEquals(1, commands.list.size());
-        final var modifyDomOutMessage = findFirstListElementByType(RemoteCommand.ModifyDom.class, commands.list).orElseThrow();
-        assertEquals(1, modifyDomOutMessage.domChanges().size());
-        assertInstanceOf(DefaultDomChangesContext.Remove.class, modifyDomOutMessage.domChanges().getFirst());
-
-        commands.list.clear();
-
-        // Add the hidden stateful component back
-        final DomEventEntry clickEvent2 = renderContext.recursiveEvents().get(0);
-        clickEvent2.eventHandler.accept(clickEventContext);
-        assertEquals(1, commands.list.size());
-        final RemoteCommand.ModifyDom modifyDomOutMessage2 = findFirstListElementByType(RemoteCommand.ModifyDom.class, commands.list).orElseThrow();
-        assertTrue(modifyDomOutMessage2.toString().contains("test-store-100"));
+        assertInstanceOf(RemoteCommand.ModifyDom.class, commands.list.get(0));
+        assertTrue(commands.list.get(0).toString().contains("test-link-101")); */
     }
 }
